# rans_dietgpu

./: CMakeLists.txt  Dockerfile  README.md
dietgpu/: CMakeLists.txt
dietgpu/ans/: CMakeLists.txt  myans.cu
